force-app/main/default/objects/Prediction__c/Prediction__c.object-meta.xml
<CustomObject>
    <label>Prediction</label>
    <nameField>
        <displayFormat>PRED-{0000}</displayFormat>
        <label>Prediction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Predictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>