force-app/main/default/objects/Prediction__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <label>Confidence Score</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>