force-app/main/default/objects/Prediction__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <label>Game</label>
    <type>Lookup</type>
    <referenceTo>Game__c</referenceTo>
    <relationshipLabel>Predictions</relationshipLabel>
    <relationshipName>Predictions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>