force-app/main/default/objects/Prediction__c/fields/Is_Current__c.field-meta.xml
<CustomField>
    <fullName>Is_Current__c</fullName>
    <label>Is Current</label>
    <description>Most recent prediction for this game</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>