force-app/main/default/objects/Prediction__c/fields/Model_Type__c.field-meta.xml
<CustomField>
    <fullName>Model_Type__c</fullName>
    <label>Model Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Statistical</fullName>
                <default>true</default>
                <label>Statistical</label>
            </value>
            <value>
                <fullName>Mascot Battle</fullName>
            </value>
            <value>
                <fullName>AI Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>