force-app/main/default/objects/Prediction__c/fields/Model_Version__c.field-meta.xml
<CustomField>
    <fullName>Model_Version__c</fullName>
    <label>Model Version</label>
    <type>Text</type>
    <length>50</length>
</CustomField>