force-app/main/default/objects/Prediction__c/fields/Predicted_Winner__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Winner__c</fullName>
    <label>Predicted Winner</label>
    <type>Lookup</type>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Predicted Wins</relationshipLabel>
    <relationshipName>Predicted_Wins</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>