force-app/main/default/objects/Prediction__c/fields/Prediction_Date__c.field-meta.xml
<CustomField>
    <fullName>Prediction_Date__c</fullName>
    <label>Prediction Date</label>
    <type>DateTime</type>
</CustomField>