force-app/main/default/objects/Prediction__c/fields/Prediction_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Prediction_Rationale__c</fullName>
    <label>Prediction Rationale</label>
    <type>Html</type>
    <length>32000</length>
</CustomField>