force-app/main/default/objects/Prediction__c/fields/Team_1_Win_Probability__c.field-meta.xml
<CustomField>
    <fullName>Team_1_Win_Probability__c</fullName>
    <label>Team 1 Win Probability</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>