force-app/main/default/objects/Prediction__c/fields/Was_Correct__c.field-meta.xml
<CustomField>
    <fullName>Was_Correct__c</fullName>
    <label>Was Correct</label>
    <type>Checkbox</type>
    <formula>AND(NOT(ISBLANK(Game__r.Winner__c)), Game__r.Winner__c = Predicted_Winner__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>